# python-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/scripts/: develop.sh  lock.sh
{{cookiecutter.project_slug}}/tests/: test_version.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/util/: check_imports.py
